--- a/18086/16-17_Multigrid.ipynb
+++ b/18086/16-17_Multigrid.ipynb
@@ -263,7 +263,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The problem is that the low frequency components convergent too slow. Thus our goal turns out to make the low frequency components convergent faster.\n",
+    "The problem is that the low frequency components convergent too slow. Thus our goal turns out to be making the low frequency components convergent faster.\n",
     "\n",
     "--------------------\n",
     "\n",
