Finished Steepest Descent and Conjugate Gradients

--- a/18086/18_Krylov_Subspace.ipynb
+++ b/18086/18_Krylov_Subspace.ipynb
@@ -60,7 +60,7 @@
     "| 5   | &emsp; $q_{j+1} = t/h_{j+1,j}$  | Normalize $t$ to $\\|q_{j+1}\\|=1$ |\n",
     "|&nbsp;| end                    | $q_1,\\cdots,q_n$ are orthonormal |\n",
     "\n",
-    "<font color='#aaaaaa'>*Custom table alignment seems to be supported after version 5.8 in Jupyter notebook. <a href='https://github.com/jupyter/notebook/pull/4130'>#4130</a>*</font>\n",
+    "<font color='#aaaaaa'>*Custom table alignment seems to be not supported until version 5.8 in Jupyter notebook. <a href='https://github.com/jupyter/notebook/pull/4130'>#4130</a>*</font>\n",
     "\n",
     "where $Aq_j$ is in the $\\mathcal{K}_{j+1}$ subspace, that is to say, $Aq_j$ is the linear combination of $q_1, \\cdots, q_j, q_{j+1}$, and the weights of these orthonormal vectors are $h_{1j},\\cdots, h_{jj}, h_{j+1,j}$. The Arnoldi's method can therefore be denoted by\n",
     "\n",
