--- a/18086/19_Steepest_Descent_and_Conjugate_Gradient.ipynb
+++ b/18086/19_Steepest_Descent_and_Conjugate_Gradient.ipynb
@@ -4,13 +4,245 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Before we start, we should declare the notation that are going to be used.\n",
+    "\n",
+    "The system we want to solve has the form\n",
+    "$$Ax = b \\tag{1}$$\n",
+    "which is eqivalent to finding the stationary point of the quadratic function\n",
+    "$$f(x) = \\frac{1}{2}x^T A x - b^T x + c \\tag{2}$$\n",
+    "\n",
+    "And the notations we are going to use is as follows\n",
+    "- $A$ is a known, square, symmetric, positive-definite matrix.\n",
+    "- $b$ is a known vector.\n",
+    "- $x$ is the unknown vector.\n",
+    "- $x_i$ is the estimated $x$ in the $i^{th}$ iteration and $x_0$ is the initial point.\n",
+    "- $e_i = x-x_i$ is the error between the true $x$ and the estimated $x_i$. It indicates how far we are from the solution.\n",
+    "- $\\alpha_i d_i = (x_i - x_{i-1})$, where $d_i$ is the direction from $x_{i-1}$ to $x_i$.\n",
+    "- $\\alpha_i$ is the weight of the direction.\n",
+    "- $r_i = b - Ax_{i} = Ax-Ax_i = Ae_i$ is the residual after the $i^{th}$ iteration. It indicates how far we are from the correct value of $b$.\n",
+    "\n",
+    "----------------\n",
+    "\n",
     "# Steepest Descent\n",
+    "\n",
+    "Think of a bowl that is given by a quadratic function \n",
+    "\n",
+    "$$f(x) = \\frac{1}{2}x^T A x - b^T x + c$$\n",
+    "\n",
+    "Our goal is to find the lowest point of this bowl.\n",
+    "\n",
+    "When first-order derivative of this function is zero, we obtain the solution.\n",
+    "\n",
+    "$$f'(x) = Ax - b = 0 \\tag{3}$$\n",
+    "\n",
+    "However, in the case that the matrix $A$ is large, it's tough to solve this matrix inverse problem directly. Steepest descent is a method that finds the solution step by step. It can start at arbitary point. Then update the position with specific direction and step size.\n",
+    "\n",
+    "$$x_{k+1} = x_k - \\alpha_k d_k \\tag{4}$$\n",
+    "\n",
+    "where $\\alpha_k$ is the step size and $d_k$ is the direction. The determination of step direction and size follows the rules below.\n",
+    "\n",
+    "## Direction\n",
+    "For approaching to the lowest point of the bowl iteratively, steepest descent chooses the direction which decreases most quickly at each point. The direction is denoted by\n",
+    "$$d_k = -f'(x_k) = b - Ax_k = r_k \\tag{5}$$\n",
+    "which is the residual we mentioned in the beginning.\n",
+    "\n",
+    "## Step size\n",
+    "\n",
+    "The method we use to determine the step size is called *line search*. It will chooses $\\alpha$ to minimize $f$ along a line. <span style=\"background-color:#e0f0ff\">Line search requires that the gradient at the next point should be orthogonal to current search direction.</span>\n",
+    "\n",
+    "There is an intuitive reason why we should expect these vectors to be orthogonal at the minimum. The slope of the parabola at any point along the search line is equal to the magnitude of the projection of the gradient onto the line. These projections represent the rate of the increase of $f$ as one traverses the line. $f$ is minimized where the projection is zero - where the gradient is orthogonal to the search line.\n",
+    "\n",
+    "We can obtain the best solution of $\\alpha_k$ by setting the derivative of $f(x_{k+1})$ to zero.\n",
+    "\n",
+    "$$\\frac{d}{d\\alpha_k}f(x_{k+1}) = f'(x_{k+1})^T\\frac{d x_{k+1}}{d \\alpha_k} = r_{k+1}^Tr_{k}=0 \\tag{6}$$\n",
+    "\n",
+    "To determine $\\alpha$, we use the expression of $r_{k}$ to denote the vector $r_{k+1}$\n",
+    "\n",
+    "$$\\begin{align*}\n",
+    "r_{k+1}r_k &= (b-Ax_{k+1})^T r_k\\\\\n",
+    "&= (b-A(x_k+\\alpha_k r_k))^T r_k\\\\\n",
+    "&= (b-Ax_k)^T r_k - \\alpha_k (Ar_k)^T r_k = 0\\\\\n",
+    "\\Rightarrow \\alpha_k (Ar_k)^T r_k &= (b-Ax_k)^T r_k\\\\\n",
+    "\\alpha_k r_k^T(Ar_k) &= r_k^T r_k\\\\\n",
+    "\\bbox[#e0f0ff]{\\alpha} &= \\bbox[#e0f0ff]{\\frac{r_k^T r_k}{r_k^T A r_k}} \\tag{7}\n",
+    "\\end{align*}$$\n",
     "\n",
     "\n",
     "\n",
     "-----------\n",
     "\n",
-    "# Gonjugate_Gradient\n"
+    "# Gonjugate_Gradients\n",
+    "\n",
+    "No matter what method do we use, the iterative update of $x$ can be denoted by\n",
+    "\n",
+    "$$x_{i+1} = x_i + \\alpha_i d_i \\tag{8}$$\n",
+    "\n",
+    "where $d_i$ is the direction we move and $\\alpha_i$ is the distance.\n",
+    "\n",
+    "## n step orthogonal direction method\n",
+    "\n",
+    "Let's pick a set of orthogonal search directions as well as take exactly one step that will be just the right length to line up evenly with $x$. Then after $n$ steps, we'll reach the point $x$.\n",
+    "\n",
+    "In this idea, it is trivial on picking the search directions because we just need them to be orthogonal to each other. The question is how to determine the step size. Projection may help us with it.\n",
+    "\n",
+    "$$a_i = \\frac{d_i^T (x-x_0)}{d_i^T d_i} = -\\frac{d_i^T e_0}{d_i^T d_i} \\tag{9}$$\n",
+    "\n",
+    "If we know the projection of the error $e_0$ onto each orthogonal equation, we can go to the target $x$ following these routes. However, this method is too silly, because if we know $e_0$, we can receive $x$ directly.\n",
+    "\n",
+    "\n",
+    "\n",
+    "## A-orthogonal\n",
+    "\n",
+    "The solution is to make the search directions A-orthogonal instead of orthogonal. Two vectors $d_i$ and $d_j$ are A-orthogonal, or conjugate, if\n",
+    "\n",
+    "$$d_i^TAd_j = 0 \\tag{10}$$\n",
+    "\n",
+    "A-orthogonal derives from the Krylov method we discussed in the previous course.\n",
+    "\n",
+    "First of all , we can conclude the Krylov method with the table below.\n",
+    "\n",
+    "\n",
+    "| Descrpition | 1 | 2 | 3 | k-1 | k | k+1 |\n",
+    "|-------------|---|---|---|-----|---|-----|\n",
+    "|<img width=200/>|<img width=50/>|<img width=50/>|<img width=50/>|<img width=50/>|<img width=50/>|<img width=50/>|<img width=50/>|\n",
+    "|Subspace   |$\\mathcal{K}_1$|$\\mathcal{K}_2$|$\\mathcal{K}_3$|$\\mathcal{K}_{k-1}$|$\\mathcal{K}_k$|$\\mathcal{K}_{k+1}$|\n",
+    "|Add the new vector $A^{j}b$ to expand subspace from $\\mathcal{K}_{j}$ to $\\mathcal{K}_{j+1}$| $b$ | $Ab$ | $A^2b$ | $A^{k-2}b$ | $A^{k-1}b$ | $A^{k}b$ |\n",
+    "|Orthonormal version of the additional vector| $q_1$ | $q_2$ | $q_3$ | $q_{k-1}$ | $q_{k}$ | $q_{k+1}$ |\n",
+    "|Vector $x_j$ is in the subspace $\\mathcal{K}_j$| $x_1$| $x_2$| $x_3$| $x_{k-1}$| $x_{k}$| $x_{k+1}$|\n",
+    "|Direction $d_j\\propto x_j-x_{j-1}$ is in the subspace $\\mathcal{K}_j$| $d_1$| $d_2$| $d_3$| $d_{k-1}$| $d_{k}$| $d_{k+1}$|\n",
+    "|Residual $r_j=b-Ax_j$ is in the subspace $\\mathcal{K}_{j+1}$| $r_0$| $r_1$| $r_2$| $r_{k-2}$| $r_{k-1}$| $r_{k}$|\n",
+    "\n",
+    "The rule for $x_k$ in conjugate gradients is that the residual $r_k = b-Ax_k$ should be orthogonal to all vectors in $\\mathcal{K}_k$. Since $r_k$ will be in $\\mathcal{K}_{k+1}$, it must be a multiple of Arnoldi's next vector $q_{k+1}$. Each residual is therefore orthogonal to all previous residuals.\n",
+    "\n",
+    "$$\\left.\\begin{array}{ll}\n",
+    "r_k \\perp v,v\\in\\mathcal{K}_{k}\\\\\n",
+    "r_k\\in \\mathcal{K}_{k+1}\\\\\n",
+    "q_{k+1}\\text{ is the orthonormal vector of } \\mathcal{K}_{k+1}\n",
+    "\\end{array}\\right\\}\\Rightarrow \\bbox[#fff0e0]{r_{k} \\propto q_{k+1}}\n",
+    "\\Rightarrow r_i^Tr_k = 0\\text{ for } i<k \\tag{11}$$\n",
+    "\n",
+    "The vector $x_i$ is in the subspace $\\mathcal{K}_i$, the vector $x_{i-1}$ is in the subspace $\\mathcal{K}_{i-1}$. Their difference is therefore in the subspace $\\mathcal{K}_{i}$. $r_{k-1}$, $r_{k}$ and their difference $r_{k}-r_{k-1}$ is orthogonal to the subspace $\\mathcal{K}_{i}$ for $i<k$.\n",
+    "\n",
+    "$$\\left.\\begin{array}{ll}\n",
+    "x_i-x_{i-1} \\in \\mathcal{K}_{i}\\\\\n",
+    "r_k-r_{k-1} \\perp \\mathcal{K}_{i}\\\\\n",
+    "\\end{array}\\right\\}\\Rightarrow \\bbox[#fff0e0]{(x_i-x_{i-1})^T(r_{k}-r_{k-1})=0 \\quad \\text{  for } i<k} \\tag{12}$$\n",
+    "\n",
+    "We can transfer the difference of residuals to\n",
+    "\n",
+    "$$\\bbox[#fff0e0]{r_k-r_{k-1}} = (b-Ax_k)-(b-Ax_{k-1}) = \\bbox[#fff0e0]{-A(x_k-x_{k-1})} \\tag{13}$$\n",
+    "\n",
+    "Substituting this equation into the orthogonal equation, we obtain.\n",
+    "\n",
+    "$$(x_i-x_{i-1})^TA(x_k-x_{k-1}) = 0 \\quad \\text{ for }i<k \\tag{14}$$\n",
+    "\n",
+    "If we use the notation $d_k$ to denote the direction from $x_{k-1}$ to $x_k$, the orthogonal equation becomes\n",
+    "\n",
+    "$$\\alpha_i d_i^TA \\alpha_k d_k=0 \\quad \\text{ for }i<k \\tag{15}$$\n",
+    "\n",
+    "where $\\alpha$ is the non-zero weights of these directions. Then we obtain the A-orthogonal or conjugate expression.\n",
+    "\n",
+    "$$\\bbox[#fff0e0]{d_i^TAd_k=0 \\quad \\text{ for }i<k} \\tag{16}$$\n",
+    "\n",
+    "And because $A$ is symmetric, the A-orthogonal expression becomes\n",
+    "\n",
+    "$$\\left.\\begin{array}{ll}\n",
+    "d_i^TAd_k=0 &\\text{ for }i<k\\\\\n",
+    "(d_i^T A d_k)^T = d_k^T A d_i =0 &\\text{ for } i<k\n",
+    "\\end{array}\\right\\}\n",
+    "\\Rightarrow \\bbox[#fff0e0]{d_i^T A d_k = 0 \\quad \\text{ for } i\\neq k} \\tag{17}$$\n",
+    "\n",
+    "## Determine the search directions\n",
+    "\n",
+    "From the table above, we find that \n",
+    "- the direction $d_{i+1}$ is in the subspace $\\mathcal{K}_{i+1}$,\n",
+    "- $r_i$ is in $\\mathcal{K}_{i+1}$,\n",
+    "- $d_1,d_2,\\cdots, d_i$ is in the subspace $\\mathcal{K}_1,\\mathcal{K}_2,\\cdots, \\mathcal{K}_i$ respectively. \n",
+    "\n",
+    "Thus any chosen $d_{i+1}$ can be achieved by the linear combination of $r_{i}$ and $d_1,d_2,\\cdots, d_i$.\n",
+    "\n",
+    "$$d_{i+1} = r_i + \\sum_{k=1}^{i}\\beta_{i+1, k}d_k \\tag{18}$$\n",
+    "\n",
+    "Both sides of the equation multiply by $Ad_j$ in, we obtain\n",
+    "\n",
+    "$$\\begin{align*}\n",
+    "d_{i+1}^TAd_j &= r_{i}^TAd_j + \\sum_{k=1}^{i}\\beta_{i+1, k}d_{k}^TA d_{j}\\\\\n",
+    " &= r_i^T \\frac{1}{\\alpha_j}(r_j-r_{j-1}) + \\sum_{k=1}^{i}\\beta_{i+1,k}d_{k}^T A d_j\\\\\n",
+    " &= \\frac{1}{\\alpha_j}r_i^T r_j-\\frac{1}{\\alpha_j}r_i^T r_{j-1} + \\sum_{k=1}^{i}\\beta_{i+1,k}d_k^T A d_j \\tag{19}\n",
+    "\\end{align*}$$\n",
+    "\n",
+    "There are 4 conditions\n",
+    "$$\\left.\\begin{array}{ll}\n",
+    "\\text{if } &j>i+1 &0 &=0-0+0\\\\\n",
+    "\\text{if } &j=i+1 &d_{i+1}^TAd_{i+1} &= 0 - \\frac{1}{\\alpha_{i+1}}r_i^T r_i + 0\\\\\n",
+    "\\text{if } &j=i &0 &= \\frac{1}{\\alpha_i}r_i^T r_i - 0 + \\beta_{i+1, i}d_{i}^T A d_{i}\\\\\n",
+    "\\text{if } &j<i &0 &= 0 - 0 + \\beta_{i+1, j}d_j^T A d_j\n",
+    "\\end{array}\\right\\}\n",
+    "\\Rightarrow \n",
+    "\\left\\{\\begin{array}{ll}\n",
+    "\\beta_{i+1,i} = \\frac{r_i^T r_i}{d_i^T A d_i} = \\frac{r_i^T r_i}{r_{i-1}^T r_{i-1}}\\\\\n",
+    "\\beta_{i+1, j} = 0\\qquad \\forall j<i\n",
+    "\\end{array}\\right. \\tag{20}$$\n",
+    "\n",
+    "where we have used two means to eliminate the zero terms. \n",
+    "- From the conjugate gradients definition, the residual in different iterations are orthogonal to each other, thus $r_i^T r_j = 0$ for $i\\neq j$.\n",
+    "- The A-orthogonal terms is zero, i.e. $d_i A d_j = 0$ for $i\\neq j$.\n",
+    "\n",
+    "And the result is inspiring, because when we compute $d_{i+1}$, only the coefficient of $d_i$ is non-zero, there is only one $\\beta$ we need to evaluate. As a result, the direction takes the form as follows\n",
+    "\n",
+    "$$d_{i+1} = r_{i} + \\beta_{i+1} d_{i}\\qquad \\text{where}\\quad \\beta_{i+1} = \\frac{r_{i}^Tr_{i}}{r_{i-1}^Tr_{i-1}} \\tag{21}$$\n",
+    "\n",
+    "\n",
+    "## Determine the search distances\n",
+    "\n",
+    "To prove that this procedure really does compute $x$ in $n$ steps, express the error term as a linear combination of search directions; namely\n",
+    "\n",
+    "$$\n",
+    "e_0 = \\sum_{j=1}^{n}\\delta_{j}d_j \\tag{22}\n",
+    "$$\n",
+    "\n",
+    "The values of $\\delta_j$ can be found by a mathematical trick. Because the search directions are derive from Krylov subspaces, they are therefore $A$-orthogonal, it is possible to eliminate all the $\\delta_j$ values from Expression 22 by premultiplying the expression by $d_k^TA$\n",
+    "\n",
+    "$$\\begin{align*}\n",
+    "d_k^T A e_0 &= \\sum_j \\delta_jd_k^TAd_j\\\\\n",
+    "&=\\delta_kd_k^TAd_k \\qquad (\\text{by A-orthogonality of d vectors})\\\\\n",
+    "\\Rightarrow \\delta_k &=\\frac{d_k^TAe_0}{d_k^TAd_k}\\\\\n",
+    "&=\\frac{d_k^TA(e_0+\\sum_{i=1}^{k-1}\\alpha_i d_i)}{d_k^TAd_k} \\qquad (\\text{by A-orthogonality of d vectors})\\\\\n",
+    "&=\\frac{d_k^TAe_{k-1}}{d_k^TAd_k} \\tag{23}\n",
+    "\\end{align*}$$\n",
+    "\n",
+    "By Equation (8), we find that $a_i = -\\delta_i$. After $n$ iteration,\n",
+    "\n",
+    "$$x_n = x_0 + \\sum_{j=1}^{n}\\alpha_jd_j= x_0 - \\sum_{j=1}^{n}\\delta_jd_j = x_0-e_0 = x \\tag{24}$$\n",
+    "\n",
+    "The proof is complete.\n",
+    "\n",
+    "And with the definition and achieved results we can write $\\alpha$ in a new form\n",
+    "\n",
+    "$$\\left.\\begin{array}{ll}\n",
+    "r_k = Ae_k\\\\\n",
+    "d_k = r_{k-1} + \\beta_k d_{k-1}\\\\\n",
+    "\\alpha_k = -\\delta_k = -\\frac{d_k^TAe_{k-1}}{d_k^TAd_k}\n",
+    "\\end{array}\\right\\}\\Rightarrow \\alpha_k = -\\frac{(r_{k-1}+\\beta d_{k-1})^T r_{k-1}}{d_{k}^T A d_{k}} = -\\frac{r_{k-1}^T r_{k-1}}{d_k^T A d_k} \\tag{25}$$\n",
+    "\n",
+    "## Conclusion\n",
+    "\n",
+    "The procedure of Conjugate gradient method is as follows\n",
+    "\n",
+    "Initially, we should set the start point $x_0 = 0$, the residual $r_0 = b - Ax_0$ and the first search diretion $d_1 = b$. Then we can go through the following procedure to estimate $x$ iteratively.\n",
+    "\n",
+    "|Step|Pseudocode|Description| Equation |\n",
+    "|----|----------|-----------|----------|\n",
+    "|<img width=30/>|<img width=200/>|<img width=200/>|<img width=30/>|\n",
+    "|1| $\\alpha_k = r_{k-1}^T r_{k-1}/d_{k}^T A d_{k}$ | Step length to next $x_k$ | (25) |\n",
+    "|2| $x_k = x_{k-1} + \\alpha_k d_{k}$ | Approximate solution | (8) |\n",
+    "|3| $r_k = r_{k-1} - \\alpha_k A d_k$ | New residual | (13) |\n",
+    "|4| $\\beta_{k+1} = r_k^T r_k/ r_{k-1}^T r_{k-1}$ | Weight of $d_k$ for next direction | (21) |\n",
+    "|5| $d_{k+1} = r_k + \\beta_{k+1}d_k$ | Next search direction | (21) |\n",
+    "\n",
+    "\n",
+    "\n",
+    "*More detail such as convergence of these methods can be found in <a href='https://www.cs.cmu.edu/~quake-papers/painless-conjugate-gradient.pdf'>An Introduction to the Conjugate Gradient Method Without the Agonizing Pain</a>*"
    ]
   },
   {
@@ -49,7 +281,7 @@
     "\n",
     "def conjugate_gradient(A, b, x):\n",
     "    r = b - (A@x)\n",
-    "    d = r\n",
+    "    d = b\n",
     "    route = np.copy(x)\n",
     "    for i in range(len(b)):\n",
     "        denominator = d @ A @ d\n",
@@ -64,6 +296,8 @@
     "        x = x + alpha * d\n",
     "        rr = r\n",
     "        r = r - alpha * A @ d\n",
+    "        \n",
+    "        # direction of next iteration\n",
     "        beta = (r @ r)/(rr @ rr)\n",
     "        d = r + beta * d\n",
     "        route = np.vstack((route, x))\n",
