--- a/18086/19_Steepest_Descent_and_Conjugate_Gradient.ipynb
+++ b/18086/19_Steepest_Descent_and_Conjugate_Gradient.ipynb
@@ -104,7 +104,7 @@
     "\n",
     "| Descrpition | 1 | 2 | 3 | k-1 | k | k+1 |\n",
     "|-------------|---|---|---|-----|---|-----|\n",
-    "|<img width=200/>|<img width=50/>|<img width=50/>|<img width=50/>|<img width=50/>|<img width=50/>|<img width=50/>|<img width=50/>|\n",
+    "|<img width=200/>|<img width=50/>|<img width=50/>|<img width=50/>|<img width=50/>|<img width=50/>|<img width=50/>|\n",
     "|Subspace   |$\\mathcal{K}_1$|$\\mathcal{K}_2$|$\\mathcal{K}_3$|$\\mathcal{K}_{k-1}$|$\\mathcal{K}_k$|$\\mathcal{K}_{k+1}$|\n",
     "|Add the new vector $A^{j}b$ to expand subspace from $\\mathcal{K}_{j}$ to $\\mathcal{K}_{j+1}$| $b$ | $Ab$ | $A^2b$ | $A^{k-2}b$ | $A^{k-1}b$ | $A^{k}b$ |\n",
     "|Orthonormal version of the additional vector| $q_1$ | $q_2$ | $q_3$ | $q_{k-1}$ | $q_{k}$ | $q_{k+1}$ |\n",
